CTA button on service pages: automatic platform detection

--- a/services/aqua.html
+++ b/services/aqua.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="aqua">
+        <a href="https://aqua.net" target="_blank" class="service-link">
+          <img src="/images/aqua.svg" alt="Aqua logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Aqua&target=website" class="cta-button cta-button--primary" data-service="Aqua">Get Aqua</a>
+          <a href="/go?service=Aqua&target=website" class="cta-link-secondary" data-service="Aqua">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
