--- a/services/bisq.html
+++ b/services/bisq.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="bisq">
+        <a href="https://bisq.network" target="_blank" class="service-link">
+          <img src="/images/bisq.svg" alt="Bisq logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Bisq&target=website" class="cta-button cta-button--primary" data-service="Bisq">Get Bisq</a>
+          <a href="/go?service=Bisq&target=website" class="cta-link-secondary" data-service="Bisq">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
