--- a/services/bitkey.html
+++ b/services/bitkey.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="bitkey">
+        <a href="https://bitkey.world" target="_blank" class="service-link">
+          <img src="/images/bitkey.svg" alt="Bitkey logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Bitkey&target=website" class="cta-button cta-button--primary" data-service="Bitkey">Get Bitkey</a>
+          <a href="/go?service=Bitkey&target=website" class="cta-link-secondary" data-service="Bitkey">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
