--- a/services/bitonic.html
+++ b/services/bitonic.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="bitonic">
+        <a href="https://bitonic.nl" target="_blank" class="service-link">
+          <img src="/images/bitonic.svg" alt="Bitonic logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Bitonic&target=website" class="cta-button cta-button--primary" data-service="Bitonic">Get Bitonic</a>
+          <a href="/go?service=Bitonic&target=website" class="cta-link-secondary" data-service="Bitonic">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
