--- a/services/bull-bitcoin.html
+++ b/services/bull-bitcoin.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="bull bitcoin">
+        <a href="https://www.bullbitcoin.com" target="_blank" class="service-link">
+          <img src="/images/bull-bitcoin.svg" alt="Bull Bitcoin logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Bull%20Bitcoin&target=website" class="cta-button cta-button--primary" data-service="Bull Bitcoin">Get Bull Bitcoin</a>
+          <a href="/go?service=Bull%20Bitcoin&target=website" class="cta-link-secondary" data-service="Bull Bitcoin">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
