--- a/services/hodlhodl.html
+++ b/services/hodlhodl.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="hodlhodl">
+        <a href="https://hodlhodl.com" target="_blank" class="service-link">
+          <img src="/images/hodlhodl.svg" alt="Hodlhodl logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Hodlhodl&target=website" class="cta-button cta-button--primary" data-service="Hodlhodl">Get Hodlhodl</a>
+          <a href="/go?service=Hodlhodl&target=website" class="cta-link-secondary" data-service="Hodlhodl">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
