--- a/services/lightspark.html
+++ b/services/lightspark.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="lightspark">
+        <a href="https://www.lightspark.com" target="_blank" class="service-link">
+          <img src="/images/lightspark.svg" alt="Lightspark logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Lightspark&target=website" class="cta-button cta-button--primary" data-service="Lightspark">Get Lightspark</a>
+          <a href="/go?service=Lightspark&target=website" class="cta-link-secondary" data-service="Lightspark">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
