--- a/services/mynode.html
+++ b/services/mynode.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="mynode">
+        <a href="https://mynodebtc.com" target="_blank" class="service-link">
+          <img src="/images/mynode.svg" alt="myNode logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=myNode&target=website" class="cta-button cta-button--primary" data-service="myNode">Get myNode</a>
+          <a href="/go?service=myNode&target=website" class="cta-link-secondary" data-service="myNode">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
