--- a/services/opennode.html
+++ b/services/opennode.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="opennode">
+        <a href="https://opennode.com" target="_blank" class="service-link">
+          <img src="/images/opennode.svg" alt="OpenNode logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=OpenNode&target=website" class="cta-button cta-button--primary" data-service="OpenNode">Get OpenNode</a>
+          <a href="/go?service=OpenNode&target=website" class="cta-link-secondary" data-service="OpenNode">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
