--- a/services/peach.html
+++ b/services/peach.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="peach">
+        <a href="https://peachbitcoin.com" target="_blank" class="service-link">
+          <img src="/images/peach.svg" alt="Peach logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Peach&target=website" class="cta-button cta-button--primary" data-service="Peach">Get Peach</a>
+          <a href="/go?service=Peach&target=website" class="cta-link-secondary" data-service="Peach">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
