--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -141,7 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
-    <div class="cta-buttons-wrapper"><a href="https://apps.apple.com/app/phoenix-wallet/id1544097028" target="_blank" rel="noopener" class="cta-button" data-variant="ios">iPhone</a><a href="https://play.google.com/store/apps/details?id=fr.acinq.phoenix.mainnet" target="_blank" rel="noopener" class="cta-button" data-variant="android">Android</a></div>
+      <div class="feature-value logo-cell" data-service="phoenix">
+        <a href="https://phoenix.acinq.co" target="_blank" class="service-link">
+          <img src="/images/phoenix.svg" alt="Phoenix logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Phoenix&target=auto" class="cta-button cta-button--primary" data-ios="https://apps.apple.com/app/phoenix-wallet/id1544097028" data-android="https://play.google.com/store/apps/details?id=fr.acinq.phoenix.mainnet" data-service="Phoenix">Get Phoenix</a>
+          <a href="/go?service=Phoenix&target=website" class="cta-link-secondary" data-service="Phoenix">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
