--- a/services/pocket.html
+++ b/services/pocket.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="pocket">
+        <a href="https://pocketbitcoin.com" target="_blank" class="service-link">
+          <img src="/images/pocket.svg" alt="Pocket logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Pocket&target=website" class="cta-button cta-button--primary" data-service="Pocket">Get Pocket</a>
+          <a href="/go?service=Pocket&target=website" class="cta-link-secondary" data-service="Pocket">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
