--- a/services/robosats.html
+++ b/services/robosats.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="robosats">
+        <a href="https://robosats.com" target="_blank" class="service-link">
+          <img src="/images/robosats.svg" alt="RoboSats logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=RoboSats&target=website" class="cta-button cta-button--primary" data-service="RoboSats">Get RoboSats</a>
+          <a href="/go?service=RoboSats&target=website" class="cta-link-secondary" data-service="RoboSats">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
