--- a/services/sparrow.html
+++ b/services/sparrow.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="sparrow">
+        <a href="https://sparrowwallet.com" target="_blank" class="service-link">
+          <img src="/images/sparrow.svg" alt="Sparrow logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Sparrow&target=website" class="cta-button cta-button--primary" data-service="Sparrow">Get Sparrow</a>
+          <a href="/go?service=Sparrow&target=website" class="cta-link-secondary" data-service="Sparrow">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
