--- a/services/start9.html
+++ b/services/start9.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="start9">
+        <a href="https://start9.com" target="_blank" class="service-link">
+          <img src="/images/start9.svg" alt="Start9 logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Start9&target=website" class="cta-button cta-button--primary" data-service="Start9">Get Start9</a>
+          <a href="/go?service=Start9&target=website" class="cta-link-secondary" data-service="Start9">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
