--- a/services/umbrel.html
+++ b/services/umbrel.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="umbrel">
+        <a href="https://umbrel.com" target="_blank" class="service-link">
+          <img src="/images/umbrel.svg" alt="Umbrel logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Umbrel&target=website" class="cta-button cta-button--primary" data-service="Umbrel">Get Umbrel</a>
+          <a href="/go?service=Umbrel&target=website" class="cta-link-secondary" data-service="Umbrel">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
