--- a/services/breez.html
+++ b/services/breez.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="breez">
+        <a href="https://breez.technology" target="_blank" class="service-link">
+          <img src="/images/breez.svg" alt="Breez logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Breez&target=website" class="cta-button cta-button--primary" data-service="Breez">Get Breez</a>
+          <a href="/go?service=Breez&target=website" class="cta-link-secondary" data-service="Breez">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
