--- a/services/btc-pay.html
+++ b/services/btc-pay.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="btc pay">
+        <a href="https://btcpayserver.org" target="_blank" class="service-link">
+          <img src="/images/btc-pay.svg" alt="BTC Pay logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=BTC%20Pay&target=website" class="cta-button cta-button--primary" data-service="BTC Pay">Get BTC Pay</a>
+          <a href="/go?service=BTC%20Pay&target=website" class="cta-link-secondary" data-service="BTC Pay">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
