--- a/services/fold.html
+++ b/services/fold.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="fold">
+        <a href="https://foldapp.com" target="_blank" class="service-link">
+          <img src="/images/fold.svg" alt="Fold logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Fold&target=website" class="cta-button cta-button--primary" data-service="Fold">Get Fold</a>
+          <a href="/go?service=Fold&target=website" class="cta-link-secondary" data-service="Fold">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
