--- a/services/muun.html
+++ b/services/muun.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="muun">
+        <a href="https://muun.com" target="_blank" class="service-link">
+          <img src="/images/muun.svg" alt="Muun logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Muun&target=website" class="cta-button cta-button--primary" data-service="Muun">Get Muun</a>
+          <a href="/go?service=Muun&target=website" class="cta-link-secondary" data-service="Muun">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
