--- a/services/relai.html
+++ b/services/relai.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="relai">
+        <a href="https://relai.app" target="_blank" class="service-link">
+          <img src="/images/relai.svg" alt="Relai logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Relai&target=website" class="cta-button cta-button--primary" data-service="Relai">Get Relai</a>
+          <a href="/go?service=Relai&target=website" class="cta-link-secondary" data-service="Relai">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
