--- a/services/river.html
+++ b/services/river.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="river">
+        <a href="https://river.com" target="_blank" class="service-link">
+          <img src="/images/river.svg" alt="River logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=River&target=website" class="cta-button cta-button--primary" data-service="River">Get River</a>
+          <a href="/go?service=River&target=website" class="cta-link-secondary" data-service="River">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
