--- a/services/strike.html
+++ b/services/strike.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="strike">
+        <a href="https://strike.me" target="_blank" class="service-link">
+          <img src="/images/strike.svg" alt="Strike logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Strike&target=website" class="cta-button cta-button--primary" data-service="Strike">Get Strike</a>
+          <a href="/go?service=Strike&target=website" class="cta-link-secondary" data-service="Strike">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
