--- a/services/swan.html
+++ b/services/swan.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="swan">
+        <a href="https://www.swanbitcoin.com" target="_blank" class="service-link">
+          <img src="/images/swan.svg" alt="Swan logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Swan&target=website" class="cta-button cta-button--primary" data-service="Swan">Get Swan</a>
+          <a href="/go?service=Swan&target=website" class="cta-link-secondary" data-service="Swan">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
