--- a/services/unchained.html
+++ b/services/unchained.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="unchained">
+        <a href="https://unchained.com" target="_blank" class="service-link">
+          <img src="/images/unchained.svg" alt="Unchained logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Unchained&target=website" class="cta-button cta-button--primary" data-service="Unchained">Get Unchained</a>
+          <a href="/go?service=Unchained&target=website" class="cta-link-secondary" data-service="Unchained">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
