--- a/services/wasabi.html
+++ b/services/wasabi.html
@@ -141,6 +141,15 @@
 <div id="comparison-container">
   <div class="logo-row-sticky">
     <div class="feature-values logo-row" id="logo-row-container">
+      <div class="feature-value logo-cell" data-service="wasabi">
+        <a href="https://wasabiwallet.io" target="_blank" class="service-link">
+          <img src="/images/wasabi.svg" alt="Wasabi logo" class="svg-icon sticky-logo" />
+        </a>
+        <div class="cta-row">
+          <a href="/go?service=Wasabi&target=website" class="cta-button cta-button--primary" data-service="Wasabi">Get Wasabi</a>
+          <a href="/go?service=Wasabi&target=website" class="cta-link-secondary" data-service="Wasabi">Visit official website</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="comparison-table-wrapper">
