Delete and split table rows between service and compare pages

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </header>
 <section class="hero-headline animated-headline">
   <h1>Find your way into Bitcoin – Fast</h1>
-  <p class="hero-subheadline">Simple comparisons. No crypto noise.</p>
+  <p class="hero-subheadline">Buoy Bitcoin quickly guides you to the best options that fit your needs.</p>
 </section>
 
 <section class="main-search">
