Quick facts chips updated and added neutral.svg icon to TL;DR

--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -302,14 +302,14 @@
   
   </div>
 </div>
-<div class="trust-chips"><div class="trust-chip">Non-custodial Lightning node on your device</div><div class="trust-chip">Automatic channel management</div><div class="trust-chip">Connect to your own Bitcoin node</div></div>
+<div class="trust-chips"><div class="trust-chip"><img src="/images/checkmark.svg" alt="positive icon" class="trust-chip-icon"/> Non-custodial</div><div class="trust-chip"><img src="/images/checkmark.svg" alt="positive icon" class="trust-chip-icon"/> Open source</div><div class="trust-chip"><img src="/images/checkmark.svg" alt="positive icon" class="trust-chip-icon"/> No KYC</div></div>
 <div class="comparison-table">
 
 <section id="tldr" class="service-section">
   <h2 class="feature-label">TL;DR</h2>
   <div class="feature-value">
     <p><img src="/images/checkmark.svg" alt="positive icon" class="checkmark-icon"/> <strong>Best for:</strong> Mobile-first Lightning payments with self-custody and automated channel care.</p>
-    <p><strong>Consider if:</strong> You expect to receive euro Lightning tips without running your own node.</p>
+    <p><img src="/images/neutral.svg" alt="neutral icon" class="checkmark-icon"/> <strong>Consider if:</strong> You expect to receive euro Lightning tips without running your own node.</p>
     <p><img src="/images/cross.svg" alt="negative icon" class="checkmark-icon"/> <strong>Not ideal when:</strong> You need desktop access or stronger payment privacy.</p>
   </div>
 </section>
