Sticky bar update + removed old scaffolding on service pages from comparison table

--- a/service.html
+++ b/service.html
@@ -105,12 +105,7 @@
    <h1 id="page-title">Compare Services</h1>
   </div>
   <!-- BUILD:START -->
-<div id="comparison-container">
-  <div class="logo-row-sticky">
-    <div class="feature-values logo-row" id="logo-row-container"></div>
-  </div>
-  <div id="comparison-table-wrapper"></div>
-</div>
+<!-- Service content (sticky bar + sections) injected here by build script -->
 <!-- BUILD:END -->
 
 <!-- FAQ_BLOCK -->
