Service template design improvements 2

--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -44,7 +44,7 @@
 })();
 </script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/phoenix.html#webpage","name":"Phoenix — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","inLanguage":"en","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/phoenix.html#service"},"dateModified":"2025-10-03"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://phoenix.acinq.co","mainEntityOfPage":"https://buoybitcoin.com/services/phoenix.html#webpage","provider":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Phoenix","item":"https://buoybitcoin.com/services/phoenix.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Lost phone → Phoenix (Restore)","description":"Recover Phoenix after device loss or move funds to another wallet safely","url":"https://buoybitcoin.com/services/phoenix.html#migrate-restore","step":[{"@type":"HowToStep","position":1,"name":"Step 1","text":"Install Phoenix on a new iOS 16+ or Android 8+ device."},{"@type":"HowToStep","position":2,"name":"Step 2","text":"Choose Restore my wallet, enter your 12-word seed, and wait for channels to resync."},{"@type":"HowToStep","position":3,"name":"Step 3","text":"Remove Phoenix from the old device once the new install works; never run both simultaneously."}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"},"totalTime":"PT10M"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Phoenix → On-chain wallet","description":"Recover Phoenix after device loss or move funds to another wallet safely","url":"https://buoybitcoin.com/services/phoenix.html#migrate-exit","step":[{"@type":"HowToStep","position":1,"name":"Step 1","text":"Open Phoenix, go to Settings > Close channels, and confirm cooperative close."},{"@type":"HowToStep","position":2,"name":"Step 2","text":"Wait for closing transactions to confirm (1–6 blocks); funds appear in Phoenix's Final wallet view."},{"@type":"HowToStep","position":3,"name":"Step 3","text":"Sweep coins to your preferred on-chain wallet once confirmed."}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"},"totalTime":"PT1H"}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Phoenix","item":"https://buoybitcoin.com/services/phoenix.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"How to restore Phoenix on a new phone (iOS/Android)","description":"Choose the path you need—restore after a lost phone, move to an on-chain wallet, or switch to another wallet","url":"https://buoybitcoin.com/services/phoenix.html#restore-phoenix","step":[{"@type":"HowToStep","position":1,"name":"Step 1","text":"Install Phoenix on a new iOS 16+ or Android 8+ device and verify it's the official app from ACINQ."},{"@type":"HowToStep","position":2,"name":"Step 2","text":"Choose Restore my wallet, enter your 12-word seed, and wait for channels to resync."},{"@type":"HowToStep","position":3,"name":"Step 3","text":"Remove Phoenix from the old device once the new install works; never run both simultaneously."}],"totalTime":"PT10M","estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Move funds from Phoenix to an on-chain wallet","description":"Choose the path you need—restore after a lost phone, move to an on-chain wallet, or switch to another wallet","url":"https://buoybitcoin.com/services/phoenix.html#move-to-onchain","step":[{"@type":"HowToStep","position":1,"name":"Step 1","text":"Open Phoenix, go to Settings > Close channels, and confirm cooperative close (cheapest way to exit)."},{"@type":"HowToStep","position":2,"name":"Step 2","text":"Wait for closing transactions to confirm (1–6 blocks); funds appear in Phoenix's Final wallet view."},{"@type":"HowToStep","position":3,"name":"Step 3","text":"Sweep coins to your preferred on-chain wallet once confirmed."}],"totalTime":"PT2H","estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Switch from Phoenix to another wallet","description":"Choose the path you need—restore after a lost phone, move to an on-chain wallet, or switch to another wallet","url":"https://buoybitcoin.com/services/phoenix.html#switch-to-another-wallet","step":[{"@type":"HowToStep","position":1,"name":"Step 1","text":"Install your new wallet and complete its backup process—verify the recovery model (seed phrase, email+code, or cloud backup)."},{"@type":"HowToStep","position":2,"name":"Step 2","text":"Send a small test payment (~10,000 sats) from Phoenix to the new wallet to verify it works."},{"@type":"HowToStep","position":3,"name":"Step 3","text":"Close Phoenix channels (Settings > Close channels) and sweep remaining funds once confirmed."}],"totalTime":"PT30M","estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script></head>
 <body>
   <div class="container">
  <header>
@@ -245,7 +245,7 @@
   <table class="fee-examples-table">
     <thead>
       <tr>
-        <th scope="col">Example</th>
+        <th scope="col">In short:</th>
         <th scope="col">What happens</th>
         <th scope="col">Likely cost</th>
       </tr>
@@ -485,36 +485,43 @@
 </section>
 
 <section id="migration" class="service-section">
-  <h2 class="feature-label">Migration</h2>
-  <p class="section-intro">Recover Phoenix after device loss or move funds to another wallet safely.</p>
+  <h2 class="feature-label">Restore or move your Phoenix wallet</h2>
+  <p class="section-intro">Choose the path you need—restore after a lost phone, move to an on-chain wallet, or switch to another wallet.</p>
   <div class="migration-flows">
-    <div class="migration-card is-collapsed" id="migrate-restore" data-flow-id="migrate-restore">
-      <div class="migration-header">
-        <h3 class="migration-title">Lost phone → Phoenix (Restore)</h3>
-        <button class="migration-toggle" aria-expanded="false" aria-controls="migrate-restore-content" aria-label="Expand migration steps" data-event="migration_toggle">
-          <span class="migration-toggle-icon"></span>
-        </button>
-      </div>
-      <div class="migration-badges"><span class="migration-badge">Time ~10 min</span><span class="migration-badge">Cost: free</span><span class="migration-badge">Risk: low if seed is safe</span></div>
-      <div class="migration-content" id="migrate-restore-content">
-        <ol class="migration-steps"><li>Install Phoenix on a new iOS 16+ or Android 8+ device.</li><li>Choose Restore my wallet, enter your 12-word seed, and wait for channels to resync.</li><li>Remove Phoenix from the old device once the new install works; never run both simultaneously.</li></ol>
-        <ul class="migration-tips"><li>Android transaction history will not migrate—only channel balances.</li><li>Keep the new device online during resync; it may take a few minutes.</li></ul>
-        
-      </div>
+    <div class="migration-card" id="restore-phoenix" data-migration-flow="restore">
+      <h3>How to restore Phoenix on a new phone (iOS/Android)</h3>
+      <div class="migration-badges"><span class="migration-badge">Time ~10 min</span><span class="migration-badge">Cost: free</span><span class="migration-badge">Risk: low (if seed is safe)</span></div>
+      <ol class="migration-steps"><li>Install Phoenix on a new iOS 16+ or Android 8+ device and verify it's the official app from ACINQ.</li><li>Choose Restore my wallet, enter your 12-word seed, and wait for channels to resync.</li><li>Remove Phoenix from the old device once the new install works; never run both simultaneously.</li></ol>
+      <div class="migration-tips"><strong>Tips:</strong> Don't run Phoenix on two phones at the same time—channel states will conflict. Keep the new device online during resync; it may take a few minutes.</div>
     </div>
-    <div class="migration-card is-collapsed" id="migrate-exit" data-flow-id="migrate-exit">
-      <div class="migration-header">
-        <h3 class="migration-title">Phoenix → On-chain wallet</h3>
-        <button class="migration-toggle" aria-expanded="false" aria-controls="migrate-exit-content" aria-label="Expand migration steps" data-event="migration_toggle">
-          <span class="migration-toggle-icon"></span>
-        </button>
-      </div>
-      <div class="migration-badges"><span class="migration-badge">Time ~1–6 hours</span><span class="migration-badge">Cost: miner fee applies</span><span class="migration-badge">Risk: low</span></div>
-      <div class="migration-content" id="migrate-exit-content">
-        <ol class="migration-steps"><li>Open Phoenix, go to Settings > Close channels, and confirm cooperative close.</li><li>Wait for closing transactions to confirm (1–6 blocks); funds appear in Phoenix's Final wallet view.</li><li>Sweep coins to your preferred on-chain wallet once confirmed.</li></ol>
-        <ul class="migration-tips"><li>Reserve force close for emergencies—it's slower and costs more in mining fees.</li><li>Check current network fees before closing; low-fee periods save sats.</li></ul>
-        <div class="migration-links"><a href="/compare/breez-vs-phoenix.html" data-event="migration_link_click" data-flow-id="migrate-exit">Compare Phoenix vs Breez</a><a href="/compare/aqua-vs-phoenix.html" data-event="migration_link_click" data-flow-id="migrate-exit">Compare Phoenix vs Aqua</a></div>
-      </div>
+    <div class="migration-card" id="move-to-onchain" data-migration-flow="move-to-onchain">
+      <h3>Move funds from Phoenix to an on-chain wallet</h3>
+      <div class="migration-badges"><span class="migration-badge">Time ~1–6 hours</span><span class="migration-badge">Cost: mining fee</span><span class="migration-badge">Risk: low</span></div>
+      <ol class="migration-steps"><li>Open Phoenix, go to Settings > Close channels, and confirm cooperative close (cheapest way to exit).</li><li>Wait for closing transactions to confirm (1–6 blocks); funds appear in Phoenix's Final wallet view.</li><li>Sweep coins to your preferred on-chain wallet once confirmed.</li></ol>
+      <div class="migration-tips"><strong>Tips:</strong> Prefer cooperative close over force close; it's faster and cheaper. Check mempool.space before closing—wait for low-fee periods to save sats.</div>
+    </div>
+    <div class="migration-card" id="switch-to-another-wallet" data-migration-flow="switch-generic">
+      <h3>Switch from Phoenix to another wallet</h3>
+      <div class="migration-badges"><span class="migration-badge">Time ~15–45 min</span><span class="migration-badge">Cost: routing/swap fees may apply</span><span class="migration-badge">Risk: low</span></div>
+      <ol class="migration-steps"><li>Install your new wallet and complete its backup process—verify the recovery model (seed phrase, email+code, or cloud backup).</li><li>Send a small test payment (~10,000 sats) from Phoenix to the new wallet to verify it works.</li><li>Close Phoenix channels (Settings > Close channels) and sweep remaining funds once confirmed.</li></ol>
+      <div class="migration-tips"><strong>Tips:</strong> Test first with a small amount (~10,000 sats) to catch issues before moving everything. Verify the new wallet's recovery model matches your security preferences.</div>
+    <div class="migration-recommendations">
+      <h4>Recommended options</h4>
+      <ul>
+      <li>
+        <a href="/services/aqua.html"><strong>Aqua</strong></a> — Recovery: 12-word seed + optional passphrase • Supports Bitcoin + Lightning + Liquid
+        <br><a href="/compare/aqua-vs-phoenix.html" class="compare-link">Compare Phoenix vs Aqua</a>
+      </li>
+      <li>
+        <a href="/services/breez.html"><strong>Breez</strong></a> — Recovery: Seed phrase + cloud backup • Supports Bitcoin + Lightning
+        <br><a href="/compare/breez-vs-phoenix.html" class="compare-link">Compare Phoenix vs Breez</a>
+      </li>
+      <li>
+        <a href="/services/muun.html"><strong>Muun</strong></a> — Recovery: Emergency kit with email and recovery code • Supports Bitcoin + Lightning
+        <br><a href="/compare/muun-vs-phoenix.html" class="compare-link">Compare Phoenix vs Muun</a>
+      </li>
+      </ul>
+    </div>
     </div>
   </div>
 </section>
