Blog section added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo">
       </a>
     </div>
+    <nav class="desktop-nav">
+      <a href="/blog/">Blog</a>
+    </nav>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
@@ -62,6 +65,12 @@
   <ul class="dropdown-list"></ul>
 </div>
 		  
+        <li>
+          <a href="/blog/">
+            <img src="images/blog.svg" alt="Blog Icon" />
+            Blog
+          </a>
+        </li>
         <li>
           <a href="about.html">
             <img src="images/about.svg" alt="About Icon" />
